# rdkafka_consumer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
