[package]
name = "kafka"
version = "0.1.0"
authors = ["piotrpsz <piotr.pszczolkowski@hitachi-powergrids.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.24"
tokio = {version = "0.2", features = ["full"]}